# curvefever

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: main.rs
curvefever_common/: Cargo.toml
curvefever_common/src/: lib.rs
curvefever_derive/: Cargo.toml
curvefever_derive/src/: lib.rs
curvefever_game/: Cargo.toml
curvefever_game/src/: app.rs  main.rs  server.rs  world.rs
curvefever_remote/: Cargo.toml  index.html
curvefever_remote/assets/: manifest.json  sw.js
curvefever_remote/src/: main.rs
src/: app.rs  main.rs  server.rs  web.rs  world.rs
