[workspace]
resolver = "2"
members = [
    "curvefever_game",
    "curvefever_remote",
    "curvefever_derive",
]

[workspace.dependencies]
curvefever_derive = { path = "curvefever_derive" }

egui = "0.26.1"
eframe = "0.26.1"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
axum = { version = "0.7.4", features = ["ws"] }
async-channel = "2.2.0"
futures-util = "0.3.30"
