[workspace]
resolver = "1"
members = [
    "curvefever_game",
    "curvefever_remote",
    "curvefever_common",
    "curvefever_derive",
]

[workspace.dependencies]
curvefever_common = { path = "curvefever_common" }
curvefever_derive = { path = "curvefever_derive" }

anyhow = "1.0"
egui = "0.28.1"
eframe = "0.28.1"
tokio = { version = "1.39.3", features = ["rt", "macros"] }
axum = { version = "0.7.5", features = ["ws"] }
async-channel = "2.3.1"
futures-util = "0.3.30"

[profile.release]
strip = true
