[package]
name = "curvefever"
version = "0.1.0"
edition = "2021"

[dependencies]
curvefever_common = { workspace = true }
curvefever_derive = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-channel = { workspace = true }
futures-util = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
local-ip-address = "0.5.7"
qrcode = "0.13.0"
