cargo-features = ["per-package-target"]

[package]
name = "curvefever_remote"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"
default-target = "wasm32-unknown-unknown"

[dependencies]
curvefever_common = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
async-channel = { workspace = true }
log = "0.4.20"
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core"] }

rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }

[dependencies.web-sys]
version = "0.3.68"
features = [
    "BinaryType",
    "Blob",
    "CloseEvent",
    "Element",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "OrientationLockType",
    "ProgressEvent",
    "Screen",
    "ScreenOrientation",
    "OrientationType",
    "OrientationLockType",
    "WebSocket",
]
