cargo-features = ["per-package-target"]

[package]
name = "curvefever_remote"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"
default-target = "wasm32-unknown-unknown"

[dependencies]
curvefever_common = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
async-channel = { workspace = true }
log = "0.4.22"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core"] }

rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
    "BinaryType",
    "Blob",
    "CloseEvent",
    "Element",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "OrientationLockType",
    "ProgressEvent",
    "Screen",
    "ScreenOrientation",
    "OrientationType",
    "OrientationLockType",
    "WebSocket",
]
